   * slowed units lose initiative on fight
   * slow still temporarily doubles movement cost
   * slowed units do not emit zone of control (ZOC)
   * unit modifications now round toward original value instead of truncating
   * changed resilient trait bonus from +7hp to +10%+3hp
   * decreased strong trait hitpoints bonus from 2 to 1
 * new unit: added the Goblin Rouser
 * units and balancing changes:
   * changed Cuttlefish tentacle attack to swarm.  changed HP from 52 to 67
   * changed Halbardier pierce attack from 9-4 to 14-3
   * changed Halbardier blade attack from 11-4 to 19-2
   * blade attack of Halbardier does not longer have firststrike
   * reduced Merman line resistance to cold from 60% to 20%
   * decreased Merman Hunter experience needed to level from 38 to 35
   * increased the HP of the Elvish Hero from 48 to 51
   * decreased Elvish Rider meele attack from 6-4 to 6-3
   * decreased Elvish Rider ranged attack from 7-3 to 9-2
   * decreased Elvish Outrider meele attack from 8-4 to 6-4
   * decreased Elvish Outrider meele attack from 7-4 to 8-3
   * decreased the cold resistances of Woses from 20% to 10%
   * reduced Drakefly snow defence from 30% to 20%
   * decreased the cold resistances of dwarves from 20% to 10%
   * decreased the blade resistances of dwarves from 30% to 20%
   * reduced Dwarvish Stellclad blade resistance from 40% to 30%
   * decreased Dwarvish Fighter hammer attack damage from 9 to 8
   * made the Dwarvish Guardsman line have 2 traits again
   * decreaesd the HP of the Thunderer from 37 to 34
   * decreased the Gryphon Riders movement from 9 to 8
   * removed Thug from Knalgan faction
   * added drain on the melee attack of the Ghost
   * decreased the Ghosts melee attack from 4-3 to 3-3
   * increased the Ghosts HP from 17 to 19
   * decreased Ghost line shallow water movement cost from 3 to 2
   * decreased Ghost line deep water movement cost from 4 to 2
   * increased the HP of the Skeleton Fighter tree by 4