@@ -23,6 +23,8 @@ name=Default
 #define FONT320_TINY
 6 #enddef
 
+{themes/macros.cfg}
+
 [resolution]
 id=1024x768
 width=1024
@@ -120,28 +122,28 @@ height=768
 	id=turn-panel
 	image=misc/status-bg.png
 	ref=actions-menu
-	rect="+5,=+1,+95,+19"
+	rect="+5,=+1,+70,+19"
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
 	[panel]
 	id=gold-panel
 	image=misc/status-bg.png
-	rect="+5,=,+95,="
+	rect="+5,=,+70,="
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
 	[panel]
 	id=villages-panel
 	image=misc/status-bg.png
-	rect="+5,=,+85,="
+	rect="+5,=,+70,="
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
 	[panel]
 	id=units-panel
 	image=misc/status-bg.png
-	rect="+5,=,+85,="
+	rect="+5,=,+70,="
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
@@ -159,6 +161,8 @@ height=768
 	xanchor=proportional
 	yanchor=fixed
 	[/panel]
+
+	{COUNTDOWN_THEME}	
 
 	# HP/XP
 	[label]
@@ -305,6 +309,9 @@ height=768
 		prefix=
 		prefix_literal=""
 		[/income]
+
+		{COUNTDOWN_THEME_STATUS}
+
 		[terrain]
 		id=status-terrain
 		font_size={FONT_SMALL}
@@ -315,7 +322,7 @@ height=768
 		[position]
 		id=status-position
 		font_size={FONT_SMALL}
-		rect="+5,=,+105,+16"
+		rect="+5,=,+95,+16"
 		xanchor=proportional
 		yanchor=fixed
 		[/position]
